# RevMPI

AdjoinableMPI/: .hgignore  .hgtags  COPYRIGHT  Doxyfile  Makefile.am  autogen.sh  configure.ac
AdjoinableMPI/.hg/: dirstate  hgrc  undo.desc
AdjoinableMPI/.hg/cache/: branchheads-served
AdjoinableMPI/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
AdjoinableMPI/.hg/store/data/: _c_o_p_y_r_i_g_h_t.i  _doxyfile.i  _makefile.am.i  autogen.sh.i  configure.ac.i  ~2ehgignore.i  ~2ehgtags.i
AdjoinableMPI/.hg/store/data/_a_dtool_stubs/_o_o/: _makefile.am.i  support.c.i
AdjoinableMPI/.hg/store/data/_a_dtool_stubs/_s_t/: _makefile.am.i  fortran_support._f.i  support.c.i
AdjoinableMPI/.hg/store/data/_bookkeeping/: _makefile.am.i  support.c.i
AdjoinableMPI/.hg/store/data/_check/: _makefile.am.i  link_complete.c.i
AdjoinableMPI/.hg/store/data/_common/: _makefile.am.i  ampi__f2c.c.i  modified.c.i  nt.c.i  pass_through.c.i  st.c.i  window.c.i
AdjoinableMPI/.hg/store/data/_plain_c/: _makefile.am.i  ampi__f2c.c.i  modified.c.i  nt.c.i  pass_through.c.i  st.c.i
AdjoinableMPI/.hg/store/data/_proto_type1/: _makefile.i  active.h.i  ampi._f90.i  ampi.c.i  ampi.h.i  ampi.inc.i  ampi__book_keeping.c.i  ampi__book_keeping.h.i  compute._f90.i  compute.c.i  compute_adj.c.i  driver.c.i  driver_adj.c.i  init.c.i
AdjoinableMPI/.hg/store/data/_tape/: _makefile.am.i  support.c.i
AdjoinableMPI/.hg/store/data/ad_tool_stubs/_o_o/: _makefile.am.i  support.c.i
AdjoinableMPI/.hg/store/data/ad_tool_stubs/_s_t/: _makefile.am.i  support.c.i
AdjoinableMPI/.hg/store/data/ampi/: _makefile.am.i  ampi.h.i  ampif.h.i
AdjoinableMPI/.hg/store/data/ampi/ad_tool/: support.h.i
AdjoinableMPI/.hg/store/data/ampi/bookkeeping/: support.h.i
AdjoinableMPI/.hg/store/data/ampi/internal/: activity.h.i  lib_config.h.in.i  modified.h.i  nt.h.i  paired_with.h.i  pass_through.h.i  request.h.i  st.h.i
AdjoinableMPI/.hg/store/data/ampi/lib_common/: modified.h.i  st.h.i
AdjoinableMPI/.hg/store/data/ampi/tape/: support.h.i
AdjoinableMPI/.hg/store/data/ampi/user_i_f/: activity.h.i  lib_config.h.in.i  modified.h.i  nt.h.i  paired_with.h.i  pass_through.h.i  request.h.i  st.h.i  window.h.i
AdjoinableMPI/.hg/store/data/ampi__tape/: ampi.c.i  ampi.h.i  ampi__interface.cc.i  ampi__tape.c.i  ampi__tape.h.i
AdjoinableMPI/.hg/store/data/config/: mpi.m4.i
AdjoinableMPI/.hg/store/data/doc/: autodiff.bib.d  autodiff.bib.i
AdjoinableMPI/.hg/store/data/doc/html/: dtype__illustration.png.i  dtype__illustration.svg.i
AdjoinableMPI/.hg/store/data/doc/images/: dtype__illustration.png.i  dtype__illustration.svg.i
AdjoinableMPI/.hg/store/data/plain_c/: _makefile.am.i  ampi.c.i  modified.c.i  nt.c.i  pass_through.c.i  st.c.i
AdjoinableMPI/ADtoolStubs/OO/: Makefile.am  support.c
AdjoinableMPI/ADtoolStubs/ST/: Makefile.am  fortranSupport.F  support.c
AdjoinableMPI/Bookkeeping/: Makefile.am  support.c
AdjoinableMPI/Check/: Makefile.am  linkComplete.c
AdjoinableMPI/Common/: Makefile.am  ampi_f2c.c  modified.c  nt.c  passThrough.c  st.c  window.c
AdjoinableMPI/PlainC/: Makefile.am  ampi_f2c.c  modified.c  nt.c  passThrough.c  st.c
AdjoinableMPI/Tape/: Makefile.am  support.c
AdjoinableMPI/ampi/: Makefile.am  ampi.h
AdjoinableMPI/ampi/adTool/: support.h
AdjoinableMPI/ampi/libCommon/: modified.h
AdjoinableMPI/ampi/userIF/: libConfig.h.in  modified.h  nt.h  request.h
AdjoinableMPI/ampi_tape/: ampi.c  ampi.h  ampi_interface.cc  ampi_tape.c  ampi_tape.h
AdjoinableMPI/config/: mpi.m4
AdjoinableMPIexamples/: .hgtags  COPYRIGHT  diffTest.py
AdjoinableMPIexamples/.hg/: dirstate  hgrc  undo.desc
AdjoinableMPIexamples/.hg/cache/: branchheads-served
AdjoinableMPIexamples/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
AdjoinableMPIexamples/Adol-C/: MakeCommon.mk  vgSupp.txt
AdjoinableMPIexamples/Adol-C/BcastAllreduceMaxReduceSum/: ampiDriver.cpp  ampiDriver.out.ref  driver.c  fdDriver.c  fdDriver.out.ref
AdjoinableMPIexamples/Adol-C/BcastAllreduceMinReduceSum/: ampiDriver.cpp  ampiDriver.out.ref  driver.c  driver.out.ref  fdDriver.c  fdDriver.out.ref
AdjoinableMPIexamples/Adol-C/BcastAllreduceProdReduceSum/: ampiDriver.cpp  ampiDriver.out.ref  driver.c  fdDriver.c  fdDriver.out.ref
AdjoinableMPIexamples/Adol-C/BcastAllreduceSumReduceSum/: ampiDriver.cpp  ampiDriver.out.ref  driver.c  driver.out.ref  fdDriver.c  fdDriver.out.ref
AdjoinableMPIexamples/Adol-C/BcastReduceMax/: ampiDriver.cpp  ampiDriver.out.ref  driver.c  fdDriver.c  fdDriver.out.ref
AdjoinableMPIexamples/Adol-C/BcastReduceMin/: ampiDriver.cpp  ampiDriver.out.ref  driver.c  driver.out.ref  fdDriver.c  fdDriver.out.ref
AdjoinableMPIexamples/Adol-C/BcastReduceProd/: ampiDriver.cpp  ampiDriver.out.ref  driver.out.ref  fdDriver.c  fdDriver.out.ref
AdjoinableMPIexamples/Adol-C/BcastReduceSum/: ampiDriver.cpp  fdDriver.c  fdDriver.out.ref
AdjoinableMPIexamples/Adol-C/BcastReduceSumProd/: ampiDriver.cpp  ampiDriver.out.ref  fdDriver.c  fdDriver.out.ref  gdbCmd
AdjoinableMPIexamples/Adol-C/BcastReduceUOp/: ampiDriver.cpp  driver.c  fdDriver.c
AdjoinableMPIexamples/Adol-C/BcastSendBarrierRecv/: ampiDriver.cpp  ampiDriver.out.ref  fdDriver.c  fdDriver.out.ref
AdjoinableMPIexamples/Adol-C/BlockingSendRecvOneWay/: ampiDriver.cpp  ampiDriver.out.ref  ampiDriverForwRev.cpp  driver.c  driver.out.ref  fdDriver.c  fdDriver.out.ref
AdjoinableMPIexamples/Adol-C/BlockingSendRecvRing/: ampiDriver.cpp  ampiDriver.out.ref  driver.c  driver.out.ref  fdDriver.c  fdDriver.out.ref  gdbCmd
AdjoinableMPIexamples/Adol-C/ContigSendRecv/: ampiDriver.cpp  driver.c  fdDriver.c  fdDriver.out.ref
AdjoinableMPIexamples/Adol-C_TLM/: MakeCommon.mk
AdjoinableMPIexamples/Collective/: MakeCommon.mk
AdjoinableMPIexamples/OneSidedActiveTarget/: MakeCommon.mk  Makefile
AdjoinableMPIexamples/SendRecvPatterns/: MakeCommon.mk
AdjoinableMPIexamples/Tapenade_C/: MakeCommon.mk  ampiSupport.c  fortranSupport.F
AdjoinableMPIexamples/Tapenade_F77/: MakeCommon.mk  ampiSupport.c  fortranSupport.F
AdjoinableMPIexamples/dco/: MakeCommon.mk
(+709 files in other folders)
