##########################################################
# This file is part of the AdjoinableMPI library         #
# released under the MIT License.                        #
# The full COPYRIGHT notice can be found in the top      #
# level directory of the AdjoinableMPI distribution.     #
########################################################## 
ACLOCAL_AMFLAGS = -I config

SUBDIRS = \
ampi \
PlainC \
Common \
Bookkeeping \
Tape \
ADtoolStubs/ST \
ADtoolStubs/OO \
Check
