##########################################################
# This file is part of the AdjoinableMPI library         #
# released under the MIT License.                        #
# The full COPYRIGHT notice can be found in the top      #
# level directory of the AdjoinableMPI distribution.     #
########################################################## 
lib_LTLIBRARIES = libampiTape.la

libampiTape_la_CPPFLAGS = -I@top_builddir@ -I@abs_top_srcdir@

libampiTape_la_SOURCES = \
support.c 
